--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
 
   <body>
-    <p> Hello world </p>
+    <a href="/Users/Kevin/aa-github_pages/kevin_nguyen_chili.html">Chili Recipe<a>
   </body>
 </html>
