Add css and pages directories to github pages

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Kevin's Github Pages!</title>
+    <!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 
   <body>
-    <a href="kevin_nguyen_chili.html">Chili Recipe<a>
+    <a href="pages/kevin_nguyen_chili.html">Chili Recipe<a>
   </body>
 </html>
