--- a/kevin_nguyen_chili.html
+++ b/kevin_nguyen_chili.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Awesome Recipes!</title>
+  <meta name="description" content="A spicy stew of beef and red chilies or chili powder, often with beans and tomatoes.">
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-12345678-9', 'auto');
+  ga('send', 'pageview');
+  </script>
 </head>
 
 <body>
@@ -80,8 +91,8 @@
     </ol>
   </section>
 
-  <section>
-    <form action="/reviews" method="post">
+  <section id="reviews">
+    <form action="/reviews" method="post" id="review-form">
       <label for="name">Name</label>
       <input id="name" type="text">
 
