Add link/script to external js and css resource

--- a/kevin_nguyen_chili.html
+++ b/kevin_nguyen_chili.html
@@ -14,6 +14,9 @@
   ga('create', 'UA-12345678-9', 'auto');
   ga('send', 'pageview');
   </script>
+
+  <script type="text/javascript" src="external_javascript_example.js"/>
+  <link rel="stylesheet" href="css_reset.css" type="text/css">
 </head>
 
 <body>
