--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
 
   <body>
-    <a href="pages/kevin_nguyen_chili.html">Chili Recipe<a>
+    <a href="kevin_nguyen_chili.html">Chili Recipe<a>
   </body>
 </html>
