Add submit review button and fix link/script syntax errors in head

--- a/kevin_nguyen_chili.html
+++ b/kevin_nguyen_chili.html
@@ -15,8 +15,8 @@
   ga('send', 'pageview');
   </script>
 
-  <script type="text/javascript" src="external_javascript_example.js"/>
-  <link rel="stylesheet" href="css_reset.css" type="text/css">
+  <script type="text/javascript" src="external_javascript_example.js"/></script>
+  <link rel="stylesheet" href="css_reset.css" type="text/css"/>
 </head>
 
 <body>
@@ -126,6 +126,8 @@
       </label>
 
       <br><br>
+
+      <input type="submit" value="Submit review!">
 
     </form>
   </section>
