Add some css for chili github page

--- a/kevin_nguyen_chili.html
+++ b/kevin_nguyen_chili.html
@@ -24,34 +24,35 @@
     <img src="https://goo.gl/lTfN3m">
 
     <nav>
-      <ul>
+      <ul class="header-links">
         <li> <a href="#description">Description</a> </li>
         <li> <a href="#ingredients">Ingredients</a> </li>
         <li> <a href="#directions">Directions</a> </li>
       </ul>
     </nav>
 
-    <aside>
-      <h2>Ingredients</h2>
-      <a name="ingredients"/>
-
-      <ul>
-        <li>1 large onion</li>
-        <li>2 cloves garlic or 1/4 teaspoon garlic powder</li>
-        <li>1 lb. lean (at least 80%) ground beef</li>
-        <li>1 tablespoon chili powder</li>
-        <li>2 teaspoons chopped fresh or 1 teaspoon dried oregano leaves</li>
-        <li>1 teaspoon ground cumin</li>
-        <li>1/2 teaspoon salt</li>
-        <li>1/2 teaspoon red pepper sauce</li>
-        <li>1 can (14.5 oz) diced tomatoes, undrained</li>
-        <li>1 can (15 to 16 oz) red kidney beans, undrained</li>
-      </ul>
-    </aside>
   </header>
 
+  <aside>
+    <h1>Ingredients</h1>
+    <a name="ingredients"/>
+
+    <ul class="ingredient-list">
+      <li>1 large onion</li>
+      <li>2 cloves garlic or 1/4 teaspoon garlic powder</li>
+      <li>1 lb. lean (at least 80%) ground beef</li>
+      <li>1 tablespoon chili powder</li>
+      <li>2 teaspoons chopped fresh or 1 teaspoon dried oregano leaves</li>
+      <li>1 teaspoon ground cumin</li>
+      <li>1/2 teaspoon salt</li>
+      <li>1/2 teaspoon red pepper sauce</li>
+      <li>1 can (14.5 oz) diced tomatoes, undrained</li>
+      <li>1 can (15 to 16 oz) red kidney beans, undrained</li>
+    </ul>
+  </aside>
+
   <section>
-  <h2>Chili</h2>
+  <h1>Chili</h1>
 
     <figure>
       <img src="https://goo.gl/SHtFdM" height="600" width="800">
@@ -61,7 +62,7 @@
     </figure>
 
 
-    <h2>Description</h2>
+    <h1>Description</h1>
     <a name="description"/>
 
     <p>
@@ -70,27 +71,15 @@
     </p>
 
 
-    <h2>Directions</h2>
+    <h1>Directions</h1>
     <a name="directions"/>
 
-    <ol>
-      <li>Peel and chop the onion to measure 1 cup. Peel and finely
-          chop the garlic.</li>
-      <li>In a 3-quart saucepan, cook the beef, onion and garlic over
-          medium heat 8 to 10 minutes, stirring occasionally, until beef
-          is thoroughly cooked. Place a strainer or colander in the sink;
-          line with a double thickness of paper towels. Pour the beef
-          mixture into the strainer to drain. Return beef mixture to
-          saucepan; discard paper towels and any juices in the bowl.</li>
-      <li>Into the beef, stir the chili powder, oregano, cumin, salt,
-          pepper sauce and tomatoes with their liquid.</li>
-      <li>Heat the mixture to boiling over high heat. Once mixture is
-          boiling, reduce heat just enough so mixture bubbles gently.
-          Cover with lid; cook 1 hour, stirring occasionally.</li>
-      <li>Stir in the beans with their liquid. Heat to boiling over
-          high heat. Once mixture is boiling, reduce heat just enough
-          so mixture bubbles gently. Cook uncovered about 20 minutes,
-          stirring occasionally, until desired thickness.</li>
+    <ol class="directions-list">
+      <li>Peel and chop the onion to measure 1 cup. Peel and finely chop the garlic.</li>
+      <li>In a 3-quart saucepan, cook the beef, onion and garlic over medium heat 8 to 10 minutes, stirring occasionally, until beef is thoroughly cooked. Place a strainer or colander in the sink; line with a double thickness of paper towels. Pour the beef mixture into the strainer to drain. Return beef mixture to saucepan; discard paper towels and any juices in the bowl.</li>
+      <li>Into the beef, stir the chili powder, oregano, cumin, salt, pepper sauce and tomatoes with their liquid.</li>
+      <li>Heat the mixture to boiling over high heat. Once mixture is boiling, reduce heat just enough so mixture bubbles gently. Cover with lid; cook 1 hour, stirring occasionally.</li>
+      <li>Stir in the beans with their liquid. Heat to boiling over high heat. Once mixture is boiling, reduce heat just enough so mixture bubbles gently. Cook uncovered about 20 minutes, stirring occasionally, until desired thickness.</li>
     </ol>
   </section>
 
