Add css_custom_reset for gh pages

--- a/kevin_nguyen_chili.html
+++ b/kevin_nguyen_chili.html
@@ -16,7 +16,7 @@
   </script>
 
   <script type="text/javascript" src="external_javascript_example.js"/></script>
-  <link rel="stylesheet" href="css_reset.css" type="text/css"/>
+  <link rel="stylesheet" href="css_custom_reset.css" type="text/css"/>
 </head>
 
 <body>
