--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Kevin's Github Pages!</title>
     <!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="css_reset.css">
+		<link rel="stylesheet" type="text/css" href="css_custom_reset.css">
   </head>
 
   <body>
