--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style3 orient-left content-align-center image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="image">
+							<img src="images/avatar.jpg" alt="" />
+						</div>
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major"><!--[-->A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.<!--]--></p>
+							<h1>Kevin Nguyen</h1>
+							<p class="major"><!--[-->Software Developer<!--]--></p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
-						<div class="image">
-							<img src="images/banner.jpg" alt="" />
-						</div>
 					</section>
+
 
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
