--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>Kevin Nguyen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,31 +17,36 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style3 orient-left content-align-center image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style3 orient-left content-align-center image-position-right fullscreen onload-image-fade-right onload-background-fade-in onload-content-fade-left">
 						<div class="image">
 							<img src="images/avatar.jpg" alt="" />
 						</div>
 						<div class="content">
 							<h1>Kevin Nguyen</h1>
 							<p class="major"><!--[-->Software Developer<!--]--></p>
-							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+							<ul class="icons">
+								<li><a href="#" class="icon style1 fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon style1 fa-file-text"><span class="label">Resume</span></a></li>
+								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
+						</div>
+						<div class="background">
+							<img src="images/banner.png" alt="" />
 						</div>
 					</section>
 
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style4 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							<h2>Hi there!</h2>
+							<p>I'm a software developer based in San Francisco, CA. Born and raised in the Bay Area, I've always been fascinated with technology and how we interact with it.</p>
+							<p>I have experience building full-stack web applications using Ruby on Rails, JavaScript/React.js, and HTML5/CSS3.</p>
+							<p>Check out some of my stuff below!</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/sf.jpg" alt="" />
 						</div>
 					</section>
 
@@ -329,13 +334,11 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon style2 fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon style2 fa-file-text"><span class="label">Resume</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
