Implement portfolio encore

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 							<h1>Kevin Nguyen</h1>
 							<p class="major"><!--[-->Software Developer<!--]--></p>
 							<ul class="icons">
-								<li><a href="#" class="icon style1 fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style1 fa-file-text"><span class="label">Resume</span></a></li>
-								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/nguyenkevin16" target="_blank" class="icon style1 fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/nguyenkevin16/" target="_blank" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="" class="icon style1 fa-file-text"><span class="label">Resume</span></a></li>
+								<li><a href="mailto:nguyenkevin16@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 						<div class="background">
@@ -51,16 +51,18 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style4 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+							<h2>Encore-Audio</h2>
+							<p>Encore is a full-stack web application inspired by SoundCloud, and is built on Ruby on Rails and React.js/Redux. Encore allows users to create, stream, and share their music.</p>
+							<ul class="actions horizontal">
+								<li><a href="#" class="button">Live</a></li>
+								<li><a href="#" class="button">Github</a></li>
 							</ul>
 						</div>
+
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/spotlight01.jpg" alt="" />
 						</div>
 					</section>
 
