Add ucsc portfolio page

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 							<h2>Encore-Audio</h2>
 							<p>Encore is a full-stack web application inspired by SoundCloud, and is built on Ruby on Rails and React.js/Redux. Encore allows users to create, stream, and share their music.</p>
 							<ul class="actions horizontal">
-								<li><a href="#" class="button">Live</a></li>
-								<li><a href="#" class="button">Github</a></li>
+								<li><a href="http://www.encore-audio.us/#/" class="button">Live</a></li>
+								<li><a href="https://github.com/nguyenkevin16/encore" class="button">Github</a></li>
 							</ul>
 						</div>
 
@@ -68,14 +68,15 @@
 				<!-- Four -->
 					<section class="spotlight style4 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+							<h2>UCSC Rugby</h2>
+							<p>UCSC Rugby is a full-stack web application built for the University of California, Santa Cruz Rugby Team.</p>
+							<ul class="actions horizontal">
+								<li><a href="#" class="button">Live</a></li>
+								<li><a href="#" class="button">Github</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/ucsc.jpg" alt="" />
 						</div>
 					</section>
 
