Add dummy profiles for hir flex and rugby page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style4 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
+					<section class="spotlight style4 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left background-rugby">
 						<div class="content">
 							<h2>UCSC Rugby</h2>
 							<p>UCSC Rugby is a full-stack web application built for the University of California, Santa Cruz Rugby Team.</p>
@@ -75,18 +75,19 @@
 								<li><a href="#" class="button">Github</a></li>
 							</ul>
 						</div>
-						<div class="image">
+						<!-- <div class="image">
 							<img src="images/ucsc.jpg" alt="" />
-						</div>
+						</div> -->
 					</section>
 
 				<!-- Five -->
 					<section class="spotlight style4 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+							<h2>CodeEdit</h2>
+							<p>CodeEdit is a browser-based collaborative text-editor built using Pheonix.ex/Elixir and React.js.</p>
+							<ul class="actions horizontal">
+								<li><a href="#" class="button">Live</a></li>
+								<li><a href="#" class="button">Github</a></li>
 							</ul>
 						</div>
 						<div class="image">
