--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-file-text"><span class="label">Resume</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/nguyenkevin16" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/nguyenkevin16/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="" class="icon style2 fa-file-text"><span class="label">Resume</span></a></li>
+								<li><a href="mailto:nguyenkevin16@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 					</footer>
