Implement background for code

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</section>
 
 				<!-- Five -->
-					<section class="spotlight style4 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right">
+					<section class="spotlight style4 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right background-code">
 						<div class="content">
 							<h2>CodeEdit (In Progress)</h2>
 							<p>CodeEdit is a browser-based collaborative text-editor built using Pheonix.ex/Elixir and React.js.</p>
@@ -90,9 +90,9 @@
 								<li><a href="#" class="button">Github</a></li>
 							</ul> -->
 						</div>
-						<div class="image">
+						<!-- <div class="image">
 							<img src="images/spotlight03.jpg" alt="" />
-						</div>
+						</div> -->
 					</section>
 
 				<!-- Footer -->
