--- a/index.html
+++ b/index.html
@@ -1,133 +1,144 @@
 <!DOCTYPE HTML>
 <!--
-	Story by HTML5 UP
+	Astral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Kevin Nguyen</title>
+		<title>Astral by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-
-		<!-- Google Analytics -->
-	  <script>
-	    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	    ga('create', 'UA-96360182-1', 'auto');
-	    ga('send', 'pageview');
-
-	  </script>
-
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="divided">
+		<!-- Wrapper-->
+			<div id="wrapper">
 
-				<!-- One -->
-					<section class="banner style3 orient-left content-align-center image-position-right fullscreen onload-image-fade-right onload-background-fade-in onload-content-fade-left">
-						<div class="image">
-							<img src="images/avatar.jpg" alt="" />
-						</div>
-						<div class="content">
-							<h1>Kevin Nguyen</h1>
-							<p class="major"><!--[-->Software Developer<!--]--></p>
-							<ul class="icons">
-								<li><a href="https://github.com/nguyenkevin16" target="_blank" class="icon style1 fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/nguyenkevin16/" target="_blank" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="" class="icon style1 fa-file-text"><span class="label">Resume</span></a></li>
-								<li><a href="mailto:nguyenkevin16@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-						</div>
-						<div class="background">
-							<img src="images/banner.png" alt="" />
-						</div>
-					</section>
+				<!-- Nav -->
+					<nav id="nav">
+						<a href="#me" class="icon fa-home active"><span>Home</span></a>
+						<a href="#work" class="icon fa-folder"><span>Work</span></a>
+						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
+						<a href="#" class="icon fa-twitter"><span>Twitter</span></a>
+					</nav>
 
-				<!-- Two -->
-					<section class="spotlight style4 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left fullscreen" id="first">
-						<div class="content">
-							<h2>Hi there!</h2>
-							<p>I'm a software developer based in San Francisco, CA. Born and raised in the Bay Area, I've always been fascinated with technology and how we interact with it.</p>
-							<p>I have experience building full-stack web applications using Ruby on Rails, JavaScript/React.js, and HTML5/CSS3.</p>
-							<p>Check out some of my stuff below!</p>
-						</div>
-						<div class="image">
-							<img src="images/sf.jpg" alt="" />
-						</div>
-					</section>
+				<!-- Main -->
+					<div id="main">
 
-				<!-- Three -->
-					<section class="spotlight style4 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right background-encore">
-						<div class="content">
-							<h2>Encore-Audio</h2>
-							<p>Encore is a full-stack web application inspired by SoundCloud, and is built on Ruby on Rails and React.js/Redux. Encore allows users to create, stream, and share their music.</p>
-							<ul class="actions horizontal">
-								<li><a href="http://www.encore-audio.us/#/" class="button">Live</a></li>
-								<li><a href="https://github.com/nguyenkevin16/encore" class="button">Github</a></li>
-							</ul>
-						</div>
+						<!-- Me -->
+							<article id="me" class="panel">
+								<header>
+									<h1>Kevin D. Nguyen</h1>
+									<p>Software Developer</p>
+								</header>
+								<a href="#work" class="jumplink pic">
+									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+									<img src="images/avatar.jpg" alt="personal photo" />
+								</a>
+							</article>
 
-						<!-- <div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
-						</div> -->
-					</section>
+						<!-- Work -->
+							<article id="work" class="panel">
+								<header>
+									<h2>Work</h2>
+								</header>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
+								<section>
+									<div class="row">
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+										</div>
+									</div>
+								</section>
+							</article>
 
-				<!-- Four -->
-					<section class="spotlight style4 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left background-rugby">
-						<div class="content">
-							<h2>UCSC Rugby (In Progress)</h2>
-							<p>UCSC Rugby is a full-stack web application built for the University of California, Santa Cruz Rugby Team.</p>
-							<!-- <ul class="actions horizontal">
-								<li><a href="#" class="button">Live</a></li>
-								<li><a href="#" class="button">Github</a></li>
-							</ul> -->
-						</div>
-						<!-- <div class="image">
-							<img src="images/ucsc.jpg" alt="" />
-						</div> -->
-					</section>
+						<!-- Contact -->
+							<article id="contact" class="panel">
+								<header>
+									<h2>Contact Me</h2>
+								</header>
+								<form action="#" method="post">
+									<div>
+										<div class="row">
+											<div class="6u 12u$(mobile)">
+												<input type="text" name="name" placeholder="Name" />
+											</div>
+											<div class="6u$ 12u$(mobile)">
+												<input type="text" name="email" placeholder="Email" />
+											</div>
+											<div class="12u$">
+												<input type="text" name="subject" placeholder="Subject" />
+											</div>
+											<div class="12u$">
+												<textarea name="message" placeholder="Message" rows="8"></textarea>
+											</div>
+											<div class="12u$">
+												<input type="submit" value="Send Message" />
+											</div>
+										</div>
+									</div>
+								</form>
+							</article>
 
-				<!-- Five -->
-					<section class="spotlight style4 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right background-code">
-						<div class="content">
-							<h2>CodeEdit (In Progress)</h2>
-							<p>CodeEdit is a browser-based collaborative text-editor built using Pheonix.ex/Elixir and React.js.</p>
-							<!-- <ul class="actions horizontal">
-								<li><a href="#" class="button">Live</a></li>
-								<li><a href="#" class="button">Github</a></li>
-							</ul> -->
-						</div>
-						<!-- <div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
-						</div> -->
-					</section>
+					</div>
 
 				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://github.com/nguyenkevin16" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/nguyenkevin16/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="" class="icon style2 fa-file-text"><span class="label">Resume</span></a></li>
-								<li><a href="mailto:nguyenkevin16@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-						</div>
-					</footer>
+					<div id="footer">
+						<ul class="copyright">
+							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
 
 			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/skel-viewport.min.js"></script>
 			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
