Add icon links to portfolio splash page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="#" class="icon fa-twitter"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -35,11 +34,19 @@
 								<header>
 									<h1>Kevin D. Nguyen</h1>
 									<p>Software Developer</p>
+
+									<ul>
+										<li><a href="https://github.com/nguyenkevin16" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://www.linkedin.com/in/nguyenkevin16/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="" class="icon style2 fa-file-text"><span class="label">Resume</span></a></li>
+									</ul>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<img src="images/avatar.jpg" alt="personal photo" />
 								</a>
 							</article>
+						
+						<!-- Skills -->
 
 						<!-- Work -->
 							<article id="work" class="panel">
@@ -47,9 +54,7 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Born and raised in the SF Bay Area, I have a passion for problem solving and modern technology.
 								</p>
 								<section>
 									<div class="row">
