--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 									<ul>
 										<li><a href="https://github.com/nguyenkevin16" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
 										<li><a href="https://www.linkedin.com/in/nguyenkevin16/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="" class="icon style2 fa-file-text"><span class="label">Resume</span></a></li>
+										<li><a href="./docs/resume.pdf" target="_blank" class="icon style2 fa-file-text"><span class="label">Resume</span></a></li>
 									</ul>
 								</header>
 								<a href="#work" class="jumplink pic">
