Add about me section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
+						<a href="#about" class="icon fa-user"><span>About Me</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 					</nav>
@@ -37,16 +38,32 @@
 									<p>Software Developer</p>
 
 									<ul>
-										<li><a href="https://github.com/nguyenkevin16" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-										<li><a href="https://www.linkedin.com/in/nguyenkevin16/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="./docs/resume.pdf" target="_blank" class="icon style2 fa-file-text"><span class="label">Resume</span></a></li>
+										<li><a href="https://github.com/nguyenkevin16" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://www.linkedin.com/in/nguyenkevin16/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="./docs/resume.pdf" target="_blank" class="icon fa-file-pdf-o"><span class="label">Resume</span></a></li>
 									</ul>
 								</header>
-								<a href="#work" class="jumplink pic">
+								<a href="#about" class="jumplink pic">
 									<img src="images/avatar.jpg" alt="personal photo" />
 								</a>
 							</article>
 						
+						<!-- About -->
+							<article id="about" class="panel">
+								<header>
+									<h1>Hi there!</h1>
+									<p>
+										I'm a software developer based in San Francisco, CA. Born and raised in the Silicon Valley, I've always been fascinated with technology and how we interact with it.
+										<br/><br/>
+										In my spare time, I love to play sports (football, rugby, basketball, you name it!), watch movies (who doesn't?), and look at cute animals on the web (but actually though...).
+									</p>
+								</header>
+
+								<a href="#work" class="jumplink pic">
+									<img src="images/silly_avatar.jpg" alt="personal photo" />
+								</a>
+							</article>
+
 						<!-- Skills -->
 
 						<!-- Work -->
