Update basic skills component

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<nav id="nav">
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#about" class="icon fa-user"><span>About Me</span></a>
-						<a href="#skills" class="icon fa-user"><span>Skills</span></a>
+						<a href="#skills" class="icon fa fa-bar-chart"><span>Skills</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 					</nav>
@@ -69,7 +69,7 @@
 							<article id="skills" class="panel">
 								<header>
 									<h2>Skills</h2>
-									<p>Just some skills and technology I have experience in.</p>
+									<p>Skills and technology I'm familiar with!</p>
 								</header>
 
 								<div>
@@ -84,7 +84,7 @@
 									</a>
 
 									<a href='https://nodejs.org/' target="_blank">
-										<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902780/node_xrbcd6.png' alt='NodeJS' />
+										<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/v1497336385/node_et5vah.png' alt='NodeJS' />
 										<p>Node.js</p>
 									</a>
 
