Update heading on skills component

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/v1496902778/CSS3_ogedms.png' alt='CSS3' />
 										<p>CSS3</p>
 									</a>
-
+								
 									<a href='https://webpack.github.io/' target="_blank">
 										<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902777/webpack_pnbal9.svg' alt='Webpack' />
 										<p>Webpack</p>
@@ -130,7 +130,7 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Born and raised in the SF Bay Area, I have a passion for problem solving and modern technology.
+									Some screenshots of my work!
 								</p>
 								<section>
 									<div class="row">
