Fix styling for skills

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<p>Skills and technology I'm familiar with!</p>
 								</header>
 
-								<div>
+								<div class='row'>
 									<a href='http://rubyonrails.org/' target="_blank">
 										<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902781/rails_clj9zs.png' alt='Ruby on Rails' />
 										<p>Ruby on Rails</p>
@@ -128,10 +128,11 @@
 							<article id="work" class="panel">
 								<header>
 									<h2>Work</h2>
+									<p>
+										Some screenshots of my work!
+									</p>
 								</header>
-								<p>
-									Some screenshots of my work!
-								</p>
+
 								<section>
 									<div class="row">
 										<div class="4u 12u$(mobile)">
