Add basic sections for work component and encore-audio screenshots

--- a/index.html
+++ b/index.html
@@ -122,56 +122,70 @@
 										<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/v1496902778/RSpec_y71pcu.png' alt='RSpec' />
 										<p>RSpec</p>
 									</a>
+								</div>
 							</article>
 
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
 									<h2>Work</h2>
-									<p>
-										Some screenshots of my work!
-									</p>
 								</header>
 
 								<section>
-									<div class="row">
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+									<section>
+										<a href="http://encore-audio.us" target="_blank"><h3>encore-audio</h3></a>
+
+										<div class="row">
+											<div class="4u 12u$(mobile)">
+												<a href="images/encore/encore-main.png" target="_blank" class="image fit"><img src="https://res.cloudinary.com/nguyenkevin16/image/upload/v1497418214/encore-main_dmhoqc.png" alt="encore audio main page"></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="images/encore/encore-discover.png" target="_blank" class="image fit"><img src="https://res.cloudinary.com/nguyenkevin16/image/upload/v1497418190/encore-discover_hqwai6.png" alt="encore audio discover page"></a>
+											</div>
+											<div class="4u$ 12u$(mobile)">
+												<a href="images/encore/encore-features.png" target="_blank" class="image fit"><img src="https://res.cloudinary.com/nguyenkevin16/image/upload/v1497418103/encore-features_lfzmzx.png" alt="encore audio features"></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="images/encore/encore-login.png" target="_blank" class="image fit"><img src="https://res.cloudinary.com/nguyenkevin16/image/upload/v1497418193/encore-login_j37tww.png" alt="encore audio login form"></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="images/encore/encore-user.png" target="_blank" class="image fit"><img src="https://res.cloudinary.com/nguyenkevin16/image/upload/v1497418193/encore-user_wc9jhq.png" alt="encore audio user page"></a>
+											</div>
+											<div class="4u$ 12u$(mobile)">
+												<a href="images/encore/encore-track.png" target="_blank" class="image fit"><img src="http://res.cloudinary.com/nguyenkevin16/image/upload/v1497418159/encore-track_gsdjrp.png" alt="encore audio track page"></a>
+											</div>
+
+											<p>
+												Encore is a music sharing full-stack web application, and is built on Ruby on Rails and React.js/Redux. Encore allows users to create, stream, and share their music.
+												<a href="http://github.com/nguyenkevin16/encore" target="_blank">github</a>
+											</p>
 										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+									</section>
+
+									<section>
+										<a href="" target="_blank"><h3>Title 2</h3></a>
+
+										<div class="row">
+											<div class="4u 12u$(mobile)">
+												<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+											</div>
+											<div class="4u$ 12u$(mobile)">
+												<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+											</div>
+											<div class="4u$ 12u$(mobile)">
+												<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											</div>
 										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
-									</div>
+									</section>
 								</section>
 							</article>
 
@@ -180,7 +194,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="#" method="post">
+								<form action="mailto:nguyenkevin16@gmail.com" method="post">
 									<div>
 										<div class="row">
 											<div class="6u 12u$(mobile)">
