--- a/index.html
+++ b/index.html
@@ -159,28 +159,73 @@
 										</div>
 									</section>
 
-									<section class="project">
-										<a href="" target="_blank"><h3>Title 2</h3></a>
+									<section class='project'>
+										<header>
+											<h3>
+												YouTube for desktop
+												<div>
+													<a href="http://http://youtubefordesktop.com/" target="_blank" class="icon fa-external-link"><span class="label">Live</span></a>
+													<a href="https://github.com/davidhu2000/youtube_desktop" target="_blank" class="icon fa-github"><span class="label">Github</span></a>
+												</div>
+											</h3>
+											<p>
+												A simple & beautiful app for YouTube's video platform.
+												<br/>
+												Browse without distractions on any OS.
+											</p>
+										</header>
 
 										<div class="row">
 											<div class="4u 12u$(mobile)">
-												<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+												<a href="images/youtube/youtube-splash.png" target="_blank" class="image fit"><img src="images/youtube/youtube-splash.png" alt="youtube splash page"></a>
 											</div>
 											<div class="4u 12u$(mobile)">
-												<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+												<a href="images/youtube/youtube-features.png" target="_blank" class="image fit"><img src="images/youtube/youtube-features.png" alt="youtube splash features"></a>
 											</div>
 											<div class="4u$ 12u$(mobile)">
-												<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+												<a href="images/youtube/youtube-homepage.png" target="_blank" class="image fit"><img src="images/youtube/youtube-homepage.png" alt="youtube main page"></a>
 											</div>
 											<div class="4u 12u$(mobile)">
-												<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+												<a href="images/youtube/youtube-oauth.png" target="_blank" class="image fit"><img src="images/youtube/youtube-oauth.png" alt="youtube oauth"></a>
 											</div>
 											<div class="4u 12u$(mobile)">
-												<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+												<a href="images/youtube/youtube-search.png" target="_blank" class="image fit"><img src="images/youtube/youtube-search.png" alt="youtube search page"></a>
 											</div>
 											<div class="4u$ 12u$(mobile)">
-												<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+												<a href="images/youtube/youtube-video.png" target="_blank" class="image fit"><img src="images/youtube/youtube-video.png" alt="youtube track page"></a>
 											</div>
+										</div>
+
+										<div id="skills" class='row'>
+											<a href='https://electron.atom.io/' target="_blank">
+												<img src='images/youtube/electron.svg' alt='Electron' />
+												<p>Electron</p>
+											</a>
+											
+											<a href='https://facebook.github.io/react/' target="_blank">
+												<img src='http://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902780/react_gi6l5k.svg' alt='ReactJS' />
+												<p>React.js</p>
+											</a>
+
+											<a href='https://nodejs.org/' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/v1497336385/node_et5vah.png' alt='NodeJS' />
+												<p>Node.js</p>
+											</a>
+
+											<a href='https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902779/HTML5_vacnsk.png' alt='HTML5' />
+												<p>HTML5</p>
+											</a>
+
+											<a href='https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/v1496902778/CSS3_ogedms.png' alt='CSS3' />
+												<p>CSS3</p>
+											</a>
+										
+											<a href='https://webpack.github.io/' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902777/webpack_pnbal9.svg' alt='Webpack' />
+												<p>Webpack</p>
+											</a>
 										</div>
 									</section>
 								</section>
