Fix link for youtubefordesktop

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 											<h3>
 												YouTube for desktop
 												<div>
-													<a href="http://http://youtubefordesktop.com/" target="_blank" class="icon fa-external-link"><span class="label">Live</span></a>
+													<a href="http://youtubefordesktop.com/" target="_blank" class="icon fa-external-link"><span class="label">Live</span></a>
 													<a href="https://github.com/davidhu2000/youtube_desktop" target="_blank" class="icon fa-github"><span class="label">Github</span></a>
 												</div>
 											</h3>
