--- a/index.html
+++ b/index.html
@@ -228,6 +228,81 @@
 											</a>
 										</div>
 									</section>
+
+									<section class='project'>
+										<header>
+											<h3>
+												UCSC Rugby (In Progress)
+												<div>
+													<a href="http://ucsc-rugby.herokuapp.com/#/" target="_blank" class="icon fa-external-link"><span class="label">Live</span></a>
+													<a href="https://github.com/nguyenkevin16/rugby" target="_blank" class="icon fa-github"><span class="label">Github</span></a>
+												</div>
+											</h3>
+											<p>
+												A mockup for the UCSC Men's Rugby Team.
+												<br/>
+												Home of the slugs.
+											</p>
+										</header>
+
+										<div class="row">
+											<div class="4u 12u$(mobile)">
+												<a href="images/rugby/rugby-main.png" target="_blank" class="image fit"><img src="images/rugby/rugby-main.png" alt="rugby main page"></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="images/rugby/rugby-about.png" target="_blank" class="image fit"><img src="images/rugby/rugby-about.png" alt="rugby about page"></a>
+											</div>
+											<div class="4u$ 12u$(mobile)">
+												<a href="images/rugby/rugby-news.png" target="_blank" class="image fit"><img src="images/rugby/rugby-news.png" alt="rugby news page"></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="images/rugby/rugby-schedule.png" target="_blank" class="image fit"><img src="images/rugby/rugby-schedule.png" alt="rugby schedule"></a>
+											</div>
+											<div class="4u 12u$(mobile)">
+												<a href="images/rugby/rugby-roster.png" target="_blank" class="image fit"><img src="images/rugby/rugby-roster.png" alt="rugby roster page"></a>
+											</div>
+											<div class="4u$ 12u$(mobile)">
+												<a href="images/rugby/rugby-coaches.png" target="_blank" class="image fit"><img src="images/rugby/rugby-coaches.png" alt="rugby coaches page"></a>
+											</div>
+										</div>
+
+										<div id="skills" class='row'>
+											<a href='http://rubyonrails.org/' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902781/rails_clj9zs.png' alt='Ruby on Rails' />
+												<p>Ruby on Rails</p>
+											</a>
+											
+											<a href='https://facebook.github.io/react/' target="_blank">
+												<img src='http://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902780/react_gi6l5k.svg' alt='ReactJS' />
+												<p>React.js</p>
+											</a>
+
+											<a href='https://nodejs.org/' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/v1497336385/node_et5vah.png' alt='NodeJS' />
+												<p>Node.js</p>
+											</a>
+
+											<a href='https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902779/HTML5_vacnsk.png' alt='HTML5' />
+												<p>HTML5</p>
+											</a>
+
+											<a href='https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/v1496902778/CSS3_ogedms.png' alt='CSS3' />
+												<p>CSS3</p>
+											</a>
+										
+											<a href='https://webpack.github.io/' target="_blank">
+												<img src='https://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902777/webpack_pnbal9.svg' alt='Webpack' />
+												<p>Webpack</p>
+											</a>
+
+											<a href='https://jquery.com/' target="_blank">
+												<img src='http://res.cloudinary.com/nguyenkevin16/image/upload/c_scale,w_300/v1496902778/jQurery_bwnmte.gif' alt='jQuery' />
+												<p>jQuery</p>
+											</a>
+										</div>
+									</section>
 								</section>
 							</article>
 
