Update email icon action

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#about" class="icon fa-user"><span>About Me</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
+						<a href="mailto:nguyenkevin16@gmail.com" class="icon fa-envelope"><span>Email</span></a>
 					</nav>
 
 				<!-- Main -->
